test/errors/mismatched_bracket.sg
' Test mismatched brackets
(def test [foo bar})